# nuxt-rust-personal

./: .gitignore  package-lock.json  package.json  readme.md
client/: README.md  dockerfile  nuxt.config.js  package-lock.json  package.json
client/.nuxt/: App.js  index.js  router.js  routes.json
client/.nuxt/components/: index.js  readme.md
client/.nuxt/vetur/: tags.json
client/components/: allFooter.vue  catCommand.vue
client/css/: main.css
client/layouts/: error.vue
client/pages/: index.vue  whynuxt.vue
client/pages/aboutme/: index.vue
components/: allFooter.vue  fileHeader.vue  navTab.vue
pages/: index.vue
pages/aboutme/: index.vue  music.vue
server/: .gitignore  Cargo.toml  data.db
server/src/: main.rs
server/src/db/: mod.rs
