[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dependencies]
rocket = { version = "0.5.0-rc.2", features=["json"] }
sqlite = "0.30.3"
chrono = "0.4.23"
serde = "1.0.152"
# totp-rs = "4.2.0"

